tests/baselines/reference/interfaceThatHidesBaseProperty2.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatHidesBaseProperty2.ts(5,11): error TS2430: Interface 'Derived' incorrectly extends interface 'Base'.
  Types of property 'x' are incompatible.
    Type '{ a: 文字; }' is not assignable to type '{ a: 数字; }'.
      Types of property 'a' are incompatible.
        Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceThatHidesBaseProperty2.ts (1 errors) ====
    interface Base {
        x: { a: number };
    }
    
    interface Derived extends Base { // error
              ~~~~~~~
!!! error TS2430: Interface 'Derived' incorrectly extends interface 'Base'.
!!! error TS2430:   Types of property 'x' are incompatible.
!!! error TS2430:     Type '{ a: 文字; }' is not assignable to type '{ a: 数字; }'.
!!! error TS2430:       Types of property 'a' are incompatible.
!!! error TS2430:         Type '文字' is not assignable to type '数字'.
        x: {
            a: string;
        };
    }